--- a/httpd/httpd-vhosts.conf
+++ b/httpd/httpd-vhosts.conf
@@ -34,12 +34,20 @@ Mutex  "file:${HTTPD_PREFIX}/logs/ssl_mutex"
     SSLProxyCheckPeerCN off
 
     RewriteEngine On
-    RewriteRule ^/BCH/(.*)$ "https://grin-docker-dev.aws.dbmi.hms.harvard.edu/BCH/$1" [P]
-    RewriteRule ^/CHOP/(.*)$ "https://grin-docker-dev.aws.dbmi.hms.harvard.edu/CHOP/$1" [P]
-    RewriteRule ^/CCHMC/(.*)$ "https://grin-docker-dev.aws.dbmi.hms.harvard.edu/CCHMC/$1" [P]
-    RewriteCond %{DOCUMENT_ROOT}/%{REQUEST_FILENAME} !-f 
+    ProxyPreserveHost On
+
+    RewriteRule ^/picsure/(.*)$ "http://picsure2:8080/pic-sure-api-2/PICSURE/$1" [P]
+    RewriteRule ^/psama/(.*)$ "http://psama:8080/pic-sure-auth-services/auth/$1" [P]
+    #RewriteRule ^/rest/v1/(.*)$ "http://irct:8080/IRCT-CL/rest/$1" [P]
+    RewriteRule ^/BCH/(.*)$ "https://grin-portal.childrens.harvard.edu/BCH/$1" [P]
+    RewriteRule ^/CHOP/(.*)$ "https://chopgrin.research.chop.edu/rest/v1/$1" [P]
+    RewriteRule ^/CCHMC/(.*)$ "https://grin-dev.research.cchmc.org/rest/$1" [P]
+
+    RewriteCond %{DOCUMENT_ROOT}/%{REQUEST_FILENAME} !-f
     RewriteCond %{DOCUMENT_ROOT}/%{REQUEST_FILENAME} !-d
-    RewriteRule (.*) /index.html [L]
+    RewriteRule ^/admin/(.*)$ /admin/index.html [L]
+
+    ErrorDocument 404 /index.html
 
     DocumentRoot "${HTTPD_PREFIX}/htdocs"
 
@@ -52,6 +60,4 @@ Mutex  "file:${HTTPD_PREFIX}/logs/ssl_mutex"
          nokeepalive ssl-unclean-shutdown \
          downgrade-1.0 force-response-1.0
 
-
 </VirtualHost>
-
