--- a/quickstart.env
+++ b/quickstart.env
@@ -10,8 +10,8 @@ IRCT_DB_HOST=mysqldb
 IRCT_DB_PORT=3306
 IRCT_DB_CONNECTION_USER=root
 IRCT_DB_PASSWORD=password
-# use aud (audience) claim in JWT token
-IRCT_USER_FIELD=aud
+# never use aud (audience) claim in JWT token
+IRCT_USER_FIELD=sub
 
 #PSAMA
 AUTH_CLIENT_SECRET=secret
