added i2b2, and missing params

--- a/.env
+++ b/.env
@@ -9,6 +9,7 @@ picsure2_version=0.0.0.irct_included2
 i2b2_wildfly_version=1.7.09c-18.1-beta-hotfix
 irct_version=1.4.2c
 irctdb_version=mysql.5.7.22-irct.1.4.2-i2b2-wildfly
+db_version=oracle.12.2.0.1-ee-i2b2.1.7.09-tm.release-18.1-v.1.4.1-nhanes-light
 
 ## labeling
 STACK_NAME=pic-sure-ui-grin
