--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
     ports:
       - 80:80
       - 443:443
+    networks:
+      - public
     volumes:
       - ./target/pic-sure-ui:/usr/local/apache2/htdocs
       - ./src/main/javascript/overrides:/usr/local/apache2/htdocs/overrides
@@ -33,19 +35,19 @@ services:
       - 8080
 
 # PIC-SURE i2b2-wildfly resource
-  # i2b2-wildfly:
-  #   image: dbmi/i2b2-wildfly:${i2b2_wildfly_version}
-  #   labels:
-  #     - "edu.hms.harvard.dbmi.stack.name=${STACK_NAME}"
-  #   env_file:
-  #     - ${ENV_FILE}
-  #   environment:
-  #     - JAVA_OPTS=-Xms512m -Xmx1024m -XX:MetaspaceSize=96M -XX:MaxMetaspaceSize=256m -Djava.net.preferIPv4Stack=true
-  #   restart: always
-  #   networks:
-  #     - public
-  #   expose:
-  #     - 9090
+  i2b2-wildfly:
+    image: dbmi/i2b2-wildfly:${i2b2_wildfly_version}
+    labels:
+      - "edu.hms.harvard.dbmi.stack.name=${STACK_NAME}"
+    env_file:
+      - ${ENV_FILE}
+    environment:
+      - JAVA_OPTS=-Xms512m -Xmx1024m -XX:MetaspaceSize=96M -XX:MaxMetaspaceSize=256m -Djava.net.preferIPv4Stack=true
+    restart: always
+    networks:
+      - public
+    expose:
+      - 9090
 
 ## PIC-SURE API Stack ##
   # PICSURE-2.0
@@ -76,6 +78,20 @@ services:
       - 8080:8080
     networks:
       - public
+
+  # i2b2transmart database. For testing purposes
+  db:
+    image: dbmi/i2b2transmart-db:${db_version}
+    labels:
+      - "edu.hms.harvard.dbmi.stack.name=${STACK_NAME}"
+    restart: always
+    networks:
+      - public
+    expose:
+      - 1521
+    # i2b2transmart database exposed port
+    ports:
+      - ${DOCKER_DB_PORT:-1521}:1521
 
   # Docker image of MySQL DB for picsure and irct services. Remove if using RDS instead
   # MySQL DB
