--- a/httpd/httpd-vhosts.conf
+++ b/httpd/httpd-vhosts.conf
@@ -38,16 +38,16 @@ Mutex  "file:${HTTPD_PREFIX}/logs/ssl_mutex"
 
     RewriteRule ^/picsure/(.*)$ "http://picsure2:8080/pic-sure-api-2/PICSURE/$1" [P]
     RewriteRule ^/psama/(.*)$ "http://psama:8080/pic-sure-auth-services/auth/$1" [P]
+    RewriteRule ^/i2b2/(.*)$ "http://i2b2-wildfly:9090/i2b2/services/$1" [P]
+    RewriteRule ^/BCH/(.*)$ "http://irct:8080/IRCT-CL/rest/$1" [P]
     #RewriteRule ^/rest/v1/(.*)$ "http://irct:8080/IRCT-CL/rest/$1" [P]
-    RewriteRule ^/BCH/(.*)$ "https://grin-portal.childrens.harvard.edu/BCH/$1" [P]
-    RewriteRule ^/CHOP/(.*)$ "https://chopgrin.research.chop.edu/rest/v1/$1" [P]
-    RewriteRule ^/CCHMC/(.*)$ "https://grin-dev.research.cchmc.org/rest/$1" [P]
+    #RewriteRule ^/BCH/(.*)$ "https://grin-docker-stage.aws.dbmi.hms.harvard.edu/rest/v1/$1" [P]
+    RewriteRule ^/CHOP/(.*)$ "https://grin-portal.childrens.harvard.edu/CHOP/$1" [P]
+    RewriteRule ^/CCHMC/(.*)$ "https://grin-portal.childrens.harvard.edu/CCHMC/$1" [P]
 
     RewriteCond %{DOCUMENT_ROOT}/%{REQUEST_FILENAME} !-f
     RewriteCond %{DOCUMENT_ROOT}/%{REQUEST_FILENAME} !-d
-    RewriteRule ^/admin/(.*)$ /admin/index.html [L]
-
-    ErrorDocument 404 /index.html
+    RewriteRule ^/(.*)$ / [L]
 
     DocumentRoot "${HTTPD_PREFIX}/htdocs"
 
