--- a/quickstart.env
+++ b/quickstart.env
@@ -5,17 +5,26 @@ I2B2METADATA=demouser
 I2B2PM=demouser
 I2B2WORKDATA=demouser
 
-# pic-sure
+DB_HOST=db
+DB_USER=BIOMART_USER
+DB_PASSWORD=biomart_user
+DB_PORT=1521
+DB_DB=ORCL
+
+# PIC-SURE
 IRCT_DB_HOST=mysqldb
 IRCT_DB_PORT=3306
 IRCT_DB_CONNECTION_USER=root
 IRCT_DB_PASSWORD=password
-# use aud (audience) claim in JWT token
-IRCT_USER_FIELD=aud
+IRCT_USER_FIELD=sub
+# Token introspection settings
+TOKEN_INTROSPECTION_URL=
+VERIFY_USER_METHOD=tokenIntrospection
+TOKEN_INTROSPECTION_TOKEN=
 
 #PSAMA
-AUTH_CLIENT_SECRET=secret
-AUTH_CLIENT_ID=client_id
+AUTH_CLIENT_SECRET=
+AUTH_CLIENT_ID=
 AUTH_USER_ID_CLAIM=sub
 AUTH0TOKEN=nothing
 AUTH0HOST=https://avillachlab.auth0.com
@@ -27,6 +36,7 @@ AUTH_DB_DATABASE=auth
 AUTH_DB_CONNECTION_USER=root
 AUTH_MYSQLPASS=password
 
+
 #PICSURE2
 # mysql database
 # Specify a container or qualified DB address
@@ -34,8 +44,10 @@ PICSURE2_MYSQLADDRESS=mysqldb
 PICSURE2_DB_PORT=3306
 PICSURE2_DB_CONNECTION_USER=root
 PICSURE2_MYSQLPASS=password
+PICSURE2_CLIENT_SECRET=
+PICSURE2_CLIENT_ID=
 
 # JWT Token
-CLIENT_ID=secret
-CLIENT_SECRET=client_id
+CLIENT_SECRET=
+CLIENT_ID=
 picsure_USER_FIELD=sub
