--- a/quickstart.env
+++ b/quickstart.env
@@ -12,15 +12,15 @@ DB_PORT=1521
 DB_DB=ORCL
 
 # PIC-SURE
-IRCT_DB_HOST=mysqldb
-IRCT_DB_PORT=3306
-IRCT_DB_CONNECTION_USER=root
-IRCT_DB_PASSWORD=password
+#IRCT_DB_HOST=mysqldb
+#IRCT_DB_PORT=3306
+#IRCT_DB_CONNECTION_USER=root
+#IRCT_DB_PASSWORD=password
 # never use aud (audience) claim in JWT token
-IRCT_USER_FIELD=sub
+#IRCT_USER_FIELD=sub
 # Token introspection settings
-TOKEN_INTROSPECTION_URL=
-VERIFY_USER_METHOD=tokenIntrospection
+#VERIFY_USER_METHOD=tokenIntrospection
+TOKEN_INTROSPECTION_URL=http://192.168.99.100/psama/token/inspect
 TOKEN_INTROSPECTION_TOKEN=
 
 #PSAMA
