--- a/quickstart.env
+++ b/quickstart.env
@@ -9,46 +9,17 @@ DB_HOST=db
 DB_USER=BIOMART_USER
 DB_PASSWORD=biomart_user
 DB_PORT=1521
-DB_DB=ORCL
+DB_DB=ORCLPDB1
 
-# PIC-SURE
-#IRCT_DB_HOST=mysqldb
-#IRCT_DB_PORT=3306
-#IRCT_DB_CONNECTION_USER=root
-#IRCT_DB_PASSWORD=password
-# never use aud (audience) claim in JWT token
-#IRCT_USER_FIELD=sub
+# PIC-SURE and PIC-SURE-2 and PSAMA common variables
+CLIENT_SECRET=
+CLIENT_ID=
 # Token introspection settings
-#VERIFY_USER_METHOD=tokenIntrospection
 TOKEN_INTROSPECTION_URL=http://192.168.99.100/psama/token/inspect
 TOKEN_INTROSPECTION_TOKEN=
 
 #PSAMA
-AUTH_CLIENT_SECRET=
-AUTH_CLIENT_ID=
-AUTH_USER_ID_CLAIM=sub
 AUTH0TOKEN=nothing
 AUTH0HOST=https://avillachlab.auth0.com
+MAIL_ACCOUNT=hms.dbmi.data.infrastructure@gmail.com
 MAIL_PASSWORD=password
-# Specify a container or qualified DB address
-AUTH_MYSQLADDRESS=mysqldb
-AUTH_DB_PORT=3306
-AUTH_DB_DATABASE=auth
-AUTH_DB_CONNECTION_USER=root
-AUTH_MYSQLPASS=password
-
-
-#PICSURE2
-# mysql database
-# Specify a container or qualified DB address
-PICSURE2_MYSQLADDRESS=mysqldb
-PICSURE2_DB_PORT=3306
-PICSURE2_DB_CONNECTION_USER=root
-PICSURE2_MYSQLPASS=password
-PICSURE2_CLIENT_SECRET=
-PICSURE2_CLIENT_ID=
-
-# JWT Token
-CLIENT_SECRET=
-CLIENT_ID=
-picsure_USER_FIELD=sub
