--- a/.env
+++ b/.env
@@ -5,9 +5,9 @@ i2b2transmart_version=release-18.1-beta-17
 
 picsureauth_ui_version=Jan-29-19
 psama_version=Jan-29-2019
-picsure2_version=0.0.0.irct_included2
+picsure2_version=master_a08f42c
 i2b2_wildfly_version=1.7.09c-18.1-beta-hotfix
-irct_version=1.4.2c
+irct_version=18.1-Quickstart
 irctdb_version=mysql.5.7.22-irct.1.4.2-i2b2-wildfly
 db_version=oracle.12.2.0.1-ee-i2b2.1.7.09-tm.release-18.1-v.1.4.1-nhanes-light
 
