--- a/httpd/Dockerfile
+++ b/httpd/Dockerfile
@@ -1,5 +1,6 @@
-FROM dbmi/pic-sure-ui:Dec-13-18 AS pic-sure-ui
-FROM dbmi/pic-sure-auth-ui:Jan-04-19 as pic-sure-auth-ui
+#FROM dbmi/pic-sure-ui:Dec-13-18 AS pic-sure-ui
+FROM dbmi/pic-sure-hpds-ui-udn:jason_udn_deployment_7f94a48 AS pic-sure-ui
+FROM dbmi/pic-sure-auth-ui:picsure-185-auth0-integration_70274e4 as pic-sure-auth-ui
 FROM httpd:2.4.27-alpine
 
 RUN apk add --update openssl sed
@@ -22,4 +23,11 @@ RUN sed -i '/^#LoadModule rewrite_module modules\/mod_rewrite.so/s/^#//' ${HTTPD
 RUN sed -i '/^#LoadModule socache_shmcb_module modules\/mod_socache_shmcb.so/s/^#//' ${HTTPD_PREFIX}/conf/httpd.conf
 RUN mkdir /usr/local/apache2/logs/ssl_mutex
 
-COPY --from=pic-sure-auth-ui /usr/local/apache2/htdocs /usr/local/apache2/htdocs/admin
+COPY --from=pic-sure-auth-ui /usr/local/apache2/htdocs /usr/local/apache2/htdocs/psamaui
+COPY --from=pic-sure-ui /usr/local/apache2/htdocs /usr/local/apache2/htdocs/picsureui
+COPY src/main/javascript/overrides /usr/local/apache2/htdocs/picsureui/overrides
+
+# Temporary fix for picsureui
+COPY extras/index.html ${HTTPD_PREFIX}/htdocs/picsureui
+COPY extras/main3.js ${HTTPD_PREFIX}/htdocs/picsureui
+COPY extras/login.hbs ${HTTPD_PREFIX}/htdocs/picsureui/hpds
