--- a/httpd/httpd-vhosts.conf
+++ b/httpd/httpd-vhosts.conf
@@ -46,7 +46,12 @@ Mutex  "file:${HTTPD_PREFIX}/logs/ssl_mutex"
 
     RewriteCond %{DOCUMENT_ROOT}/%{REQUEST_FILENAME} !-f
     RewriteCond %{DOCUMENT_ROOT}/%{REQUEST_FILENAME} !-d
-    RewriteRule ^/(.*)$ / [L]
+
+    RewriteRule ^/psamaui/(.*)$ /psamaui/index.html [C]
+    RewriteRule ^/picsureui/(.*)$ /picsureui/index.html [C]
+
+    RewriteRule (.*) / [L]
+    ErrorDocument 404 /index.html
 
     DocumentRoot "${HTTPD_PREFIX}/htdocs"
 
