--- a/config/picsureui/settings.json
+++ b/config/picsureui/settings.json
@@ -16,5 +16,8 @@
 			"basePath" : "/CHOP",
 			"basePui" : "/chop-grin-i2b2-countonly/Demo/GRIN_DIAG/GRIN"
 		}
-		]
+  ],
+  "helpLink": "mailto:bchbiobank4discovery@childrens.harvard.edu",
+  "advancedSearchLink":"",
+  "client_id": "ywAq4Xu4Kl3uYNdm3m05Cc5ow0OibvXt"
 }
