updated images, configs and variables

--- a/config/picsureui/settings.json
+++ b/config/picsureui/settings.json
@@ -19,5 +19,5 @@
   ],
   "helpLink": "mailto:bchbiobank4discovery@childrens.harvard.edu",
   "advancedSearchLink":"",
-  "client_id": "ywAq4Xu4Kl3uYNdm3m05Cc5ow0OibvXt"
+  "client_id": ""
 }
