--- a/quickstart.env
+++ b/quickstart.env
@@ -5,18 +5,26 @@ I2B2METADATA=demouser
 I2B2PM=demouser
 I2B2WORKDATA=demouser
 
-DB_HOST=db
+DB_HOST=RDS_HOST
 DB_USER=BIOMART_USER
 DB_PASSWORD=biomart_user
 DB_PORT=1521
-DB_DB=ORCLPDB1
+DB_DB=ORCL
 
 # PIC-SURE and PIC-SURE-2 and PSAMA common variables
 CLIENT_SECRET=
 CLIENT_ID=
+
+SYSTEM_NAME=psama
+CLIENT_SECRET_IS_BASE_64=true
+USER_ACTIVATION_TEMPLATE_PATH=none
+USER_ACTIVATION_REPLY_TO=none
+TOS_ENABLED=true
+
 # Token introspection settings
-TOKEN_INTROSPECTION_URL=http://192.168.99.100/psama/token/inspect
+TOKEN_INTROSPECTION_URL=http://ec2-18-234-76-99.compute-1.amazonaws.com/psama/token/inspect
 TOKEN_INTROSPECTION_TOKEN=
+TOKEN_INTROSPECTION_TOKEN_PS2=
 
 #PSAMA
 AUTH0TOKEN=nothing
