grin deployment with one wildfly

--- a/.env
+++ b/.env
@@ -1,17 +1,16 @@
 ### for all environments ####
 
 # versions
-i2b2transmart_version=release-18.1-beta-17
 psama_version=jason_udn_deployment_283e04b
-picsure2_version=master_a08f42c
+picsure2_version=picsure246-jndi.8c898d
 i2b2_wildfly_version=1.7.09c-18.1-beta-hotfix
 irct_version=18.1-Quickstart
 irctdb_version=mysql.5.7.22-irct.1.4.2-i2b2-wildfly
 db_version=oracle.12.2.0.1-ee-i2b2.1.7.09-tm.release-18.1-v.1.4.1-nhanes-light
 
 ## labeling
-STACK_NAME=pic-sure-ui-grin
+STACK_NAME=grin
 
 ## container environment variables
 # loads these values into the container
-ENV_FILE=quickstart.env
+ENV_FILE=grin.env
