--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,39 +54,85 @@ services:
     expose:
       - 9090
 
-## PIC-SURE API Stack ##
-  # PICSURE-2.0
-  picsure2:
-    image: dbmi/picsure2:${picsure2_version}
-    # command: --debug 8787
+  wildfly:
+    image: jboss/wildfly:15.0.1.Final
     labels:
       - "edu.hms.harvard.dbmi.stack.name=${STACK_NAME}"
-    depends_on:
-      - httpd
     env_file:
       - ${ENV_FILE}
-    volumes:
-      - $PWD/config/picsure2/standalone.xml:/opt/jboss/wildfly/standalone/configuration/standalone.xml
     restart: always
     expose:
-      - 8080
-    command: --server-config=standalone.xml
+      - 8787
     networks:
       - public
-
-  psama:
-    image: dbmi/pic-sure-auth-services:${psama_version}
-    #command: --debug *:8787
-    labels:
-      - "edu.hms.harvard.dbmi.stack.name=${STACK_NAME}"
-    env_file:
-      - ${ENV_FILE}
+    entrypoint: /opt/jboss/wildfly/bin/standalone.sh -b 0.0.0.0 -bmanagement 0.0.0.0 --debug 0.0.0.0:8787
+    user: root
+    ports:
+      - 8787:8787
     volumes:
-      - $PWD/config/psama/standalone.xml:/opt/jboss/wildfly/standalone/configuration/standalone.xml
-    expose:
-      - 8080
+      - $PWD/config/wildfly/modules/system/layers/base/com/sql/:/opt/jboss/wildfly/modules/system/layers/base/com/sql/
+      - $PWD/config/wildfly/deployments/:/opt/jboss/wildfly/standalone/deployments/
+      - $PWD/config/wildfly/standalone.xml:/opt/jboss/wildfly/standalone/configuration/standalone.xml
+    depends_on:
+      - copy-picsure2-war
+      - copy-psama-war
+      - copy-irct-bch-resource
+      - copy-irct-cchmc-resource
+      - copy-irct-chop-resource
+
+  copy-picsure2-war:
+    image: dbmi/picsure2:${picsure2_version}
+    user: root
+    volumes:
+      - $PWD/config/wildfly/:/opt/local/docker-config/wildfly/
     networks:
       - public
+    entrypoint: cp /opt/jboss/wildfly/standalone/deployments/pic-sure-api-2.war /opt/local/docker-config/wildfly/deployments/
+
+  copy-psama-war:
+    image: dbmi/pic-sure-auth-services:${psama_version}
+    user: root
+    volumes:
+      - $PWD/config/wildfly/:/opt/local/docker-config/wildfly/
+    networks:
+      - public
+    entrypoint: cp /opt/jboss/wildfly/standalone/deployments/pic-sure-auth-services.war /opt/local/docker-config/wildfly/deployments/
+
+  copy-irct-bch-resource:
+    image: dbmi/pic-sure-irct-resource:picsure246-jndi.8c898d
+    user: root
+    volumes:
+      - $PWD/config/irct-resources-webxml/bch/web.xml:/opt/local/docker-config/webxml/web.xml
+      - $PWD/config/wildfly/:/opt/local/docker-config/wildfly/
+    networks:
+      - public
+    entrypoint:
+      - /opt/jboss/wildfly/bin/jboss-cli.sh --connect --command="deployment-overlay add --name=myoverlay --content=WEB-INF/web.xml=/opt/local/docker-config/webxml/web.xml"
+      - cp /opt/jboss/wildfly/standalone/deployments/pic-sure-irct-resource.war /opt/local/docker-config/wildfly/deployments/pic-sure-irct-bch-resource.war
+
+  copy-irct-cchmc-resource:
+    image: dbmi/pic-sure-irct-resource:picsure246-jndi.8c898d
+    user: root
+    volumes:
+      - $PWD/config/irct-resources-webxml/cchmc/:/opt/local/docker-config/webxml/
+      - $PWD/config/wildfly/:/opt/local/docker-config/wildfly/
+    networks:
+      - public
+    entrypoint:
+      - /opt/jboss/wildfly/bin/jboss-cli.sh --connect --command="deployment-overlay add --name=myoverlay --content=WEB-INF/web.xml=/opt/local/docker-config/webxml/web.xml"
+      - cp /opt/jboss/wildfly/standalone/deployments/pic-sure-irct-resource.war /opt/local/docker-config/wildfly/deployments/pic-sure-irct-cchmc-resource.war
+
+  copy-irct-chop-resource:
+    image: dbmi/pic-sure-irct-resource:picsure246-jndi.8c898d
+    user: root
+    volumes:
+      - $PWD/config/irct-resources-webxml/chop/:/opt/local/docker-config/webxml/
+      - $PWD/config/wildfly/:/opt/local/docker-config/wildfly/
+    networks:
+      - public
+    entrypoint:
+      - /opt/jboss/wildfly/bin/jboss-cli.sh --connect --command="deployment-overlay add --name=myoverlay --content=WEB-INF/web.xml=/opt/local/docker-config/webxml/web.xml"
+      - cp /opt/jboss/wildfly/standalone/deployments/pic-sure-irct-resource.war /opt/local/docker-config/wildfly/deployments/pic-sure-irct-chop-resource.war
 
   # i2b2transmart database. For testing purposes
   # db:
