--- a/httpd/httpd-vhosts.conf
+++ b/httpd/httpd-vhosts.conf
@@ -35,8 +35,8 @@ Mutex  "file:${HTTPD_PREFIX}/logs/ssl_mutex"
     RewriteEngine On
     ProxyPreserveHost On
 
-    RewriteRule ^/picsure/(.*)$ "http://picsure2:8080/pic-sure-api-2/PICSURE/$1" [P]
-    RewriteRule ^/psama/(.*)$ "http://psama:8080/pic-sure-auth-services/auth/$1" [P]
+    RewriteRule ^/picsure/(.*)$ "http://wildfly:8080/pic-sure-api-2/PICSURE/$1" [P]
+    RewriteRule ^/psama/(.*)$ "http://wildfly:8080/pic-sure-auth-services/auth/$1" [P]
     RewriteRule ^/i2b2/(.*)$ "http://i2b2-wildfly:9090/i2b2/services/$1" [P]
     RewriteRule ^/BCH/(.*)$ "http://irct:8080/IRCT-CL/rest/$1" [P]
     RewriteRule ^/CHOP/(.*)$ "https://grin-portal.childrens.harvard.edu/CHOP/$1" [P]
