switching to an image where the code matches the commit hash

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 
 # versions
 psama_version=jason_udn_deployment_283e04b
-picsure2_version=picsure246-jndi.8c898d
+picsure2_version=picsure246-jndi.8c898d_jason
 i2b2_wildfly_version=1.7.09c-18.1-beta-hotfix
 irct_version=18.1-Quickstart
 irctdb_version=mysql.5.7.22-irct.1.4.2-i2b2-wildfly
