--- a/httpd/Dockerfile
+++ b/httpd/Dockerfile
@@ -1,5 +1,5 @@
-FROM dbmi/pic-sure-ui:master_7e8babf AS pic-sure-ui
-FROM dbmi/pic-sure-auth-ui:alex_udn_deployment_598c3cc  as pic-sure-auth-ui
+FROM dbmi/pic-sure-ui:ui_fix_f8b24b0 AS pic-sure-ui
+FROM dbmi/pic-sure-auth-ui:alex_udn_deployment_36195c7 as pic-sure-auth-ui
 FROM httpd:2.4.27-alpine
 
 RUN apk add --update openssl sed
