--- a/httpd/httpd-vhosts.conf
+++ b/httpd/httpd-vhosts.conf
@@ -1,4 +1,5 @@
-Listen 443
+Listen 0.0.0.0:80                                        
+Listen 0.0.0.0:443    
 
 ##
 ##  SSL Global Context
@@ -27,10 +28,20 @@ SSLSessionCache        "shmcb:${HTTPD_PREFIX}/logs/ssl_scache(512000)"
 SSLSessionCacheTimeout  300
 
 Mutex  "file:${HTTPD_PREFIX}/logs/ssl_mutex"
+                                                     
+NameVirtualHost *:80                                                  
+<VirtualHost *:80>                                                    
+    Redirect /picsureui(/) https://ec2-18-234-76-99.compute-1.amazonaws.com/picsureui      
+    Redirect /psamaui(/) https://ec2-18-234-76-99.compute-1.amazonaws.com/psamaui          
+    Redirect / https://ec2-18-234-76-99.compute-1.amazonaws.com/                           
+</VirtualHost>
 
-<VirtualHost _default_:80>
+<VirtualHost _default_:443>
     SSLProxyEngine on
-    SSLProxyCheckPeerCN off
+    SSLProxyCheckPeerCN off     
+    SSLCertificateFile "${HTTPD_PREFIX}/cert/server.crt"              
+    SSLCertificateKeyFile "${HTTPD_PREFIX}/cert/server.key"           
+    SSLCertificateChainFile "${HTTPD_PREFIX}/cert/server.chain"   
 
     RewriteEngine On
     ProxyPreserveHost On
@@ -48,8 +59,8 @@ Mutex  "file:${HTTPD_PREFIX}/logs/ssl_mutex"
     RewriteRule ^/psamaui/(.*)$ /psamaui/index.html [C]
     RewriteRule ^/picsureui/(.*)$ /picsureui/index.html [C]
 
-    RewriteRule (.*) / [L]
-    ErrorDocument 404 /index.html
+    RedirectMatch ^/$ /picsureui/                                                           
+    ErrorDocument 404 /picsureui/index.html                                                 
 
     DocumentRoot "${HTTPD_PREFIX}/htdocs"
 
