removing web.xml patch in favor of JNDI only fix

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -102,9 +102,7 @@ services:
     entrypoint: cp /opt/jboss/wildfly/standalone/deployments/pic-sure-auth-services.war /opt/local/docker-config/wildfly/deployments/
 
   copy-irct-bch-resource:
-    build:
-      context: ./irct-resources/bch
-      dockerfile: Dockerfile
+    image: dbmi/pic-sure-irct-resource:picsure246-jndi.8c898d_jason
     user: root
     volumes:
       - /usr/local/docker-config/wildfly/:/opt/local/docker-config/wildfly/
@@ -113,9 +111,7 @@ services:
     entrypoint: cp /opt/jboss/wildfly/standalone/deployments/pic-sure-irct-resource.war /opt/local/docker-config/wildfly/deployments/pic-sure-irct-resource-bch.war
 
   copy-irct-cchmc-resource:
-    build:
-      context: ./irct-resources/cchmc
-      dockerfile: Dockerfile
+    image: dbmi/pic-sure-irct-resource:picsure246-jndi.8c898d_jason
     user: root
     volumes:
       - /usr/local/docker-config/wildfly/:/opt/local/docker-config/wildfly/
@@ -124,9 +120,7 @@ services:
     entrypoint: cp /opt/jboss/wildfly/standalone/deployments/pic-sure-irct-resource.war /opt/local/docker-config/wildfly/deployments/pic-sure-irct-resource-cchmc.war
 
   copy-irct-chop-resource:
-    build:
-      context: ./irct-resources/chop
-      dockerfile: Dockerfile
+    image: dbmi/pic-sure-irct-resource:picsure246-jndi.8c898d_jason
     user: root
     volumes:
       - /usr/local/docker-config/wildfly/:/opt/local/docker-config/wildfly/
