--- a/grin.env
+++ b/grin.env
@@ -36,3 +36,10 @@ MAIL_PASSWORD=password
 BCH_IRCT_TARGET_URL=
 CCHMC_IRCT_TARGET_URL=
 CHOP_IRCT_TARGET_URL=
+
+TARGET_GNOME_URL=http://irct:8080/IRCT-CL/rest
+TARGET_I2B2_URL=http://irct:8080/IRCT-CL/rest
+PICSURE_2_TOKEN=unused
+TARGET_PICSURE_URL=http://wildfly:8080/pic-sure-api-2/PICSURE
+I2B2_LABEL=
+
