--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 psama_version=jason_udn_deployment_283e04b
 picsure2_version=picsure246-jndi.8c898d_jason
 i2b2_wildfly_version=1.7.09c-18.1-beta-hotfix
-irct_version=18.1-Quickstart
+irct_version=1.4.2_master_808c596
 irctdb_version=mysql.5.7.22-irct.1.4.2-i2b2-wildfly
 db_version=oracle.12.2.0.1-ee-i2b2.1.7.09-tm.release-18.1-v.1.4.1-nhanes-light
 
