--- a/httpd/httpd-vhosts.conf
+++ b/httpd/httpd-vhosts.conf
@@ -44,7 +44,8 @@ NameVirtualHost *:80
     SSLCertificateChainFile "${HTTPD_PREFIX}/cert/server.chain"   
 
     RewriteEngine On
-    ProxyPreserveHost On
+    ProxyPreserveHost Off
+    ProxyTimeout 300
 
     RewriteRule ^/picsure/(.*)$ "http://wildfly:8080/pic-sure-api-2/PICSURE/$1" [P]
     RewriteRule ^/psama/(.*)$ "http://wildfly:8080/pic-sure-auth-services/auth/$1" [P]
