moving the environment specific configuration file reference out of the repo, the example template will still be version controlled in the repo

--- a/.env
+++ b/.env
@@ -13,4 +13,4 @@ STACK_NAME=grin
 
 ## container environment variables
 # loads these values into the container
-ENV_FILE=grin.env
+ENV_FILE=/usr/local/docker-config/grin.env
