fixing proxy configs, this is for prod, dev environments will need local tweaks

--- a/httpd/httpd-vhosts.conf
+++ b/httpd/httpd-vhosts.conf
@@ -31,9 +31,9 @@ Mutex  "file:${HTTPD_PREFIX}/logs/ssl_mutex"
                                                      
 NameVirtualHost *:80                                                  
 <VirtualHost *:80>                                                    
-    Redirect /picsureui(/) https://ec2-18-234-76-99.compute-1.amazonaws.com/picsureui      
-    Redirect /psamaui(/) https://ec2-18-234-76-99.compute-1.amazonaws.com/psamaui          
-    Redirect / https://ec2-18-234-76-99.compute-1.amazonaws.com/                           
+    Redirect /picsureui(/) https://grin-portal.hms.harvard.edu/picsureui      
+    Redirect /psamaui(/) https://grin-portal.hms.harvard.edu/psamaui          
+    Redirect / https://grin-portal.hms.harvard.edu/             
 </VirtualHost>
 
 <VirtualHost _default_:443>
@@ -49,8 +49,8 @@ NameVirtualHost *:80
     RewriteRule ^/psama/(.*)$ "http://wildfly:8080/pic-sure-auth-services/auth/$1" [P]
     RewriteRule ^/i2b2/(.*)$ "http://i2b2-wildfly:9090/i2b2/services/$1" [P]
     RewriteRule ^/BCH/(.*)$ "http://irct:8080/IRCT-CL/rest/$1" [P]
-    RewriteRule ^/CHOP/(.*)$ "https://grin-portal.childrens.harvard.edu/CHOP/$1" [P]
-    RewriteRule ^/CCHMC/(.*)$ "https://grin-portal.childrens.harvard.edu/CCHMC/$1" [P]
+    RewriteRule ^/CHOP/(.*)$ "https://chopgrin.research.chop.edu/rest/v1/$1" [P]
+
 
     RewriteCond %{DOCUMENT_ROOT}/%{REQUEST_FILENAME} !-f
     RewriteCond %{DOCUMENT_ROOT}/%{REQUEST_FILENAME} !-d
