updating cachebusting for deployment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -76,6 +76,7 @@ services:
       - /usr/local/docker-config/wildfly/modules/system/layers/base/com/sql/:/opt/jboss/wildfly/modules/system/layers/base/com/sql/
       - /usr/local/docker-config/wildfly/deployments/:/opt/jboss/wildfly/standalone/deployments/
       - /usr/local/docker-config/wildfly/standalone.xml:/opt/jboss/wildfly/standalone/configuration/standalone.xml
+      - /usr/local/docker-config/wildfly/activationEmail.mustache:/usr/local/docker-config/wildfly/activationEmail.mustache
     depends_on:
       - copy-picsure2-war
       - copy-psama-war
